tests/type_errors/let_poly_num_constraint.nos
# expect_error: Num
# Regression test: let-poly with Num trait bound must reject String
# Bug: HasTrait(Num) was not registered in trait_bounds for generalized vars,
# so double("hello") compiled but failed at runtime

main() = {
  double = (x) => x + x
  double("hello")
}
